# planet-mitchell

./: .ghcid  .gitignore  .stack.all.yaml  .stack.none.yaml  .stylish-haskell.yaml  .travis.yml  .weeder.yaml  Alternative.hs  Applicative.hs  At.hs  Benchmark.hs  Bifoldable.hs  Bifunctor.hs  Bitraversable.hs  Bits.hs  Bool.hs  Bounded.hs  ByteString.hs  CHANGELOG.md  Category.hs  Chan.hs  Char.hs  Clock.hs  Coerce.hs  Comonad.hs  ComonadApply.hs  Compact.hs  Compose.hs  Concurrency.hs  Cons.hs  Const.hs  Constraint.hs  Cont.hs  Contravariant.hs  Counter.hs  DList.hs  Data.hs  Debug.hs  Decidable.hs  Distributive.hs  (+135 more)
Ala/: Compose.hs  Identity.hs  Product.hs  Sum.hs
Array/: Partial.hs
Bifoldable/: Partial.hs
ByteString/: Latin1.hs  Lazy.hs  Partial.hs  Short.hs  Utf8.hs
ByteString/Lazy/: Base16.hs
Char/: Partial.hs
Coerce/: Unsafe.hs
Comonad/: Apply.hs
DList/: Partial.hs
File/: Binary.hs  Text.hs
Foldable/: Partial.hs
Graph/: Adjacency.hs  Inductive.hs
IO/: Unsafe.hs
IntMap/: Lazy.hs
Json/: Decode.hs  Encode.hs
List/: Builder.hs  NonEmpty.hs  Partial.hs
List/Builder/: Partial.hs
Map/: Lazy.hs
Map/Int/: Lazy.hs
Monad/: Fail.hs  Fix.hs  Trans.hs  Zip.hs
MultiSet/: Int.hs
Numeric/: Complex.hs  Double.hs  Erf.hs  Fast.hs  Floating.hs  Int32.hs  Int8.hs  Integer.hs  Integral.hs  InvErf.hs  Nat.hs  Natural.hs  Num.hs  Product.hs  Ratio.hs  Real.hs  RealFrac.hs  Scientific.hs  Sum.hs  Word.hs  Word16.hs  Word32.hs  Word64.hs
Optic/: Fold.hs  Getter.hs  Getting.hs  Iso.hs  Lens.hs  Prism.hs  Review.hs  Setter.hs  Traversal.hs
PSQ/: Hash.hs
Parser/: Binary.hs  Cli.hs  Earley.hs  Env.hs
Ptr/: Foreign.hs  Fun.hs
STM/: TBChan.hs  TBMChan.hs  TBMQueue.hs  TBQueue.hs  TBimap.hs  TChan.hs  TMChan.hs  TMQueue.hs  TMVar.hs  TVar.hs
Str/: Base16.hs  Binary.hs  Latin1.hs  Utf16.hs
Str/Base16/: Lazy.hs
Str/Binary/: Lazy.hs  Partial.hs  Short.hs
Str/Lazy/: Base16.hs  Binary.hs  Latin1.hs  Utf16.hs
Str/Utf16/: Lazy.hs  Short.hs
Test/: Gen.hs  Range.hs
Text/: Lazy.hs  Partial.hs
Vector/: Generic.hs  Mutable.hs  Primitive.hs  Storable.hs  Unboxed.hs
bench/: Semaphore.hs
planet-mitchell/: CHANGELOG.md  planet-mitchell.cabal
planet-mitchell-test/: CHANGELOG.md  planet-mitchell-test.cabal
planet-mitchell-test/src/: Test.hs
planet-mitchell/src/: Applicative.hs  Array.hs  Bits.hs  Bool.hs  Bounded.hs  ByteString.hs  CaseInsensitive.hs  Char.hs  Compactable.hs  Concurrency.hs  Contravariant.hs  Distributive.hs  Either.hs  Email.hs  Equality.hs  Eval.hs  File.hs  Foldable.hs  Function.hs  Functor.hs  Generic.hs  Hashable.hs  IO.hs  Ix.hs  List.hs  List1.hs  Maybe.hs  Monad.hs  Monoid.hs  MultiSet.hs  Parallelism.hs  Pretty.hs  Printf.hs  Process.hs  Read.hs  Reader.hs  RuntimeSystem.hs  ST.hs  Scanl.hs  Serialise.hs  (+15 more)
planet-mitchell/src/Ala/: Compose.hs  Identity.hs  Product.hs  Sum.hs
planet-mitchell/src/Alg/: Alternative.hs  Applicative.hs  Category.hs  Comonad.hs  Compactable.hs  Contravariant.hs  Copointed.hs  Decidable.hs  Distributive.hs  Divisible.hs  Foldable.hs  Functor.hs  Groupoid.hs  Monad.hs  Monoid.hs  Pointed.hs  Profunctor.hs  Semigroup.hs  Semigroupoid.hs  Semilattice.hs  Traversable.hs
planet-mitchell/src/Alg/Foldable/: Partial.hs
planet-mitchell/src/Alg/Monad/: Base.hs  Fail.hs  Fix.hs  Plus.hs  Trans.hs  Zip.hs
planet-mitchell/src/Array/: Partial.hs
planet-mitchell/src/ByteString/: Base16.hs  Latin1.hs  Lazy.hs
planet-mitchell/src/ByteString/Latin1/: Partial.hs
planet-mitchell/src/ByteString/Lazy/: Builder.hs
planet-mitchell/src/Concurrency/: Chan.hs  Counter.hs  IORef.hs  MVar.hs  TBMChan.hs  TBQueue.hs  TBimap.hs  TChan.hs  TMap.hs  TMultimap.hs  TSet.hs  TVar.hs
planet-mitchell/src/Eff/Mtl/: Cont.hs  Except.hs  List.hs  Logic.hs  Reader.hs  State.hs  Writer.hs
planet-mitchell/src/Email/: Unsafe.hs
planet-mitchell/src/File/: Binary.hs  Text.hs
planet-mitchell/src/Foldable/: Partial.hs
planet-mitchell/src/Graph/: Inductive.hs
planet-mitchell/src/IO/: Unsafe.hs
planet-mitchell/src/Json/: Decode.hs
planet-mitchell/src/Lang/: C.hs
planet-mitchell/src/List/: NonEmpty.hs  Partial.hs
planet-mitchell/src/List/NonEmpty/: Partial.hs
planet-mitchell/src/List1/: Partial.hs
planet-mitchell/src/Map/Hash/: Linked.hs
planet-mitchell/src/Maybe/: Partial.hs
planet-mitchell/src/Mitchell/: Prelude.hs
planet-mitchell/src/Monad/: Trans.hs
planet-mitchell/src/Num/: Complex.hs  Double.hs  Float.hs  Floating.hs  Fractional.hs  Half.hs  Int.hs  Integer.hs  Integral.hs  InvErf.hs  Nat.hs  Natural.hs  Num.hs  Real.hs  RealFrac.hs  Word.hs
planet-mitchell/src/Num/Integer/: Partial.hs
planet-mitchell/src/Optic/: Getting.hs  Iso.hs  Lens.hs  Prism.hs  Review.hs  Setter.hs  Traversal.hs
planet-mitchell/src/Optic/Fold/: Unsafe.hs
planet-mitchell/src/Optic/Iso/: Strict.hs
planet-mitchell/src/Optic/Lens/: At.hs  Contains.hs
planet-mitchell/src/Optic/Traversal/: Each.hs
planet-mitchell/src/Parser/: Text.hs
planet-mitchell/src/Posix/: Signal.hs
planet-mitchell/src/Ptr/: Static.hs
planet-mitchell/src/Set/: Int.hs
planet-mitchell/src/Text/: Builder.hs  Partial.hs  QQ.hs  Short.hs
planet-mitchell/src/Text/Lazy/: Builder.hs
planet-mitchell/src/Text/Short/: Unsafe.hs
planet-mitchell/src/Vector/: Generic.hs  Mutable.hs  Primitive.hs
planet-mitchell/src/Vector/Generic/: Mutable.hs
src/: Alternative.hs  Applicative.hs  Array.hs  Bifoldable.hs  Bifunctor.hs  Bitraversable.hs  Bits.hs  Bool.hs  Bounded.hs  ByteString.hs  CaseInsensitive.hs  Chan.hs  Char.hs  Clock.hs  Coerce.hs  Comonad.hs  CompactRegion.hs  Concurrency.hs  Constraint.hs  Cont.hs  Contravariant.hs  Copointed.hs  Data.hs  Debug.hs  Decidable.hs  Distributive.hs  Dynamic.hs  Either.hs  Enum.hs  Environment.hs  Equality.hs  Error.hs  Except.hs  Exception.hs  File.hs  Foldable.hs  Function.hs  Functor.hs  Generic.hs  Groupoid.hs  (+47 more)
src/Ala/: Const.hs  Identity.hs
src/ByteString/: Base16.hs  Latin1.hs  Lazy.hs  Short.hs  Utf8.hs
src/Concurrency/: Counter.hs  IORef.hs  MVar.hs  QSem.hs  TBChan.hs  TBMQueue.hs  TBQueue.hs  (+7 more)
(+101 files in other folders)
